[gd_scene load_steps=3 format=3 uid="uid://75pocnhmvxuu"]

[ext_resource type="Script" path="res://Scripts/perguntas.gd" id="1_7aqvu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhyto"]
size = Vector2(408, 184)

[node name="Perguntas" type="Node2D"]
script = ExtResource("1_7aqvu")

[node name="HolderAzul" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HolderAzul"]
position = Vector2(204, 348)
shape = SubResource("RectangleShape2D_jhyto")

[node name="resp3" type="Button" parent="HolderAzul"]
offset_left = 8.0
offset_top = 392.0
offset_right = 192.0
offset_bottom = 432.0

[node name="resp1" type="Button" parent="HolderAzul"]
offset_left = 8.0
offset_top = 344.0
offset_right = 192.0
offset_bottom = 384.0

[node name="resp2" type="Button" parent="HolderAzul"]
offset_left = 208.0
offset_top = 344.0
offset_right = 392.0
offset_bottom = 384.0

[node name="resp4" type="Button" parent="HolderAzul"]
offset_left = 208.0
offset_top = 392.0
offset_right = 392.0
offset_bottom = 432.0

[node name="HolderRosa" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HolderRosa"]
position = Vector2(616, 348)
shape = SubResource("RectangleShape2D_jhyto")

[node name="resp5" type="Button" parent="HolderRosa"]
offset_left = 420.0
offset_top = 392.0
offset_right = 604.0
offset_bottom = 432.0

[node name="resp6" type="Button" parent="HolderRosa"]
offset_left = 420.0
offset_top = 344.0
offset_right = 604.0
offset_bottom = 384.0

[node name="resp7" type="Button" parent="HolderRosa"]
offset_left = 620.0
offset_top = 344.0
offset_right = 804.0
offset_bottom = 384.0

[node name="resp8" type="Button" parent="HolderRosa"]
offset_left = 620.0
offset_top = 392.0
offset_right = 804.0
offset_bottom = 432.0
